objects/PortalNotificationContent__c.object
<CustomObject>
    <fields>
        <fullName>ContentText__c</fullName>
        <label>ContentText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentType</label>
        <referenceTo>ContentType__c</referenceTo>
        <relationshipLabel>PortalNotificationContents</relationshipLabel>
        <relationshipName>PortalNotificationContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Days__c</fullName>
        <label>Data_Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_StartDate__c</fullName>
        <label>Data_StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PortalNotificationContentEID__c</fullName>
        <label>PortalNotificationContentEID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PortalNotificationModule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PortalNotificationModule</label>
        <referenceTo>PortalNotificationModule__c</referenceTo>
        <relationshipLabel>PortalNotificationContents</relationshipLabel>
        <relationshipName>PortalNotificationContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PortalNotificationContent</label>
    <nameField>
        <label>PortalNotificationContent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PortalNotificationContents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>